--- a/styles/index/ourServices.css
+++ b/styles/index/ourServices.css
@@ -8,9 +8,18 @@
 }
 .card-container {
   background-color: white;
-  padding: 1em;
+  padding-top: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 4em;
   border-radius: 0.3em;
   transition: 0.3s;
+  position: relative;
+}
+.services-learn-more-row {
+  position: absolute;
+  bottom: 5em;
+  width: 90%;
 }
 .services-learn-more {
   padding-top: 1em;
@@ -41,4 +50,66 @@
 }
 .service-indicator-deactive {
   color: #767677;
+}
+.position-relative {
+  position: relative !important;
+}
+.left-card-button {
+  position: absolute;
+  top: 0;
+  right: 30%;
+  left: 0;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 1.2em;
+  padding-right: 1.2em;
+  background-color: #f4f7fc;
+  transition: 0.3s;
+}
+.right-card-button {
+  position: absolute;
+  right: 0;
+  left: 70%;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 1.2em;
+  padding-right: 1.2em;
+  background-color: #ff3c00;
+  transition: 0.3s;
+  transform: skew(-29deg) translate(-1em);
+}
+.right-cart-rectangle {
+  position: absolute;
+  right: 0em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 1.2em;
+  padding-right: 1.2em;
+  background-color: #ff3c00;
+  transition: 0.3s;
+}
+.card-arrow-i {
+  position: absolute;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 1.2em;
+  padding-right: 1.2em;
+  right: 0;
+  transition: 0.3s;
+}
+
+.services-learn-more-row:hover > .position-relative > .left-card-button {
+  background-color: #ff3c00;
+  color: white;
+}
+.services-learn-more-row:hover > .position-relative > .right-card-button {
+  background-color: #222222;
+  color: white;
+}
+.services-learn-more-row:hover > .position-relative > .right-cart-rectangle {
+  background-color: #222222;
+  color: white;
+}
+.services-learn-more-row:hover > .position-relative > .card-arrow-i {
+  color: white;
 }
